# box

./: CMakeLists.txt  android  android.ini  build.sh  cmakelist.txt  conanfile.py  conanfile.txt  dow_ndk.sh  vcpkg.json
.github/workflows/: ci.yml  cq.yml  main.yml
api/: CMakeLists.txt  main.cpp  main.h
src/: hello.cpp  hello_boost.cpp  main.cpp
